Changed toList method with collect(Collectors.toList)